# hedgehog_bot

./: .gitignore  README.md  install.sh  pyproject.toml
releases/: 1-0.md  index.md
src/: config.py  main.py
src/components/: middleware.py  rules.py  tools.py
src/db/: __init__.py  func.py  models.py
src/handlers/: __init__.py  basic.py  chat_admin.py  creator.py  new_chat.py  timers.py
src/handlers/basic/: __init__.py
src/handlers/chat_message/: __init__.py  chat_admin.py
src/handlers/private_message/: __init__.py
src/modules/: __init__.py  custom_rules.py  keyboards.py  tools.py
src/services/: admin.py  basic.py  chat_new.py  creator.py  random_events.py  timers.py
src/timers/: __init__.py  indicators.py  news.py
